Fix navigation button postition on mobile

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -8,20 +8,22 @@
   width: 1.375rem
   height: 1.375rem
   position: fixed
-  top: 3rem
+  top: 1.3rem
   left: 2.5%
   z-index: 110
   text-align: center
+  margin-top: 0
   padding: 0
   transform: rotate(0deg)
   cursor: pointer
   transition: transform 300ms ease-in
 
   @include extra-small
-    top: 0
+    top: 1.3rem
 
   @include small
     left: 2.0625rem
+    top: 1.5rem
 
   @include medium
     display: none
